<resources>
    <string name="app_name">WeatherApp</string>
    <string name="sun_rise_set">Восход %1$s,    Закат %2$s</string>
    <string name="weather_info">Погода в г. %1$s на %2$s</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dialog_sensor_delete">Удалить сенсор %1$s?</string>
    <string name="temp">Темп</string>
    <string name="vcc">Vcc</string>
    <string name="humidity">Влажность</string>
    <string name="dhumidity">Протечка</string>
    <string name="intrv_day">День</string>
    <string name="intrv_week">Неделя</string>
    <string name="intrv_month">Месяц</string>
    <string name="intrv_hour">Час</string>
    <string name="intrv_all_period">Все</string>
    <string name="log_severity_error">Ошибки</string>
    <string name="log_severity_all">Все</string>
    <string name="settings">Настройки</string>
</resources>
