<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.weatherapp.logview.LogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimarySurround"
        tools:context="com.example.android.weatherapp.MainActivity">

        <RadioGroup
            android:id="@+id/radioGroupLogSeverity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_log_all"
                android:layout_weight="1"
                android:text="@string/log_severity_all"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textSize="@dimen/size_medium"
                android:checked="true"
                android:onClick="@{() -> viewModel.onFilterSeverityAll()}"
                />
            <RadioButton
                android:id="@+id/radio_vcc"
                android:layout_weight="1"
                android:text="@string/log_severity_error"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textSize="@dimen/size_medium"
                android:onClick="@{() -> viewModel.onFilterSeverityErr()}"
                />
        </RadioGroup>
        <RadioGroup
            android:id="@+id/radioGroupLogIntrv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintLeft_toRightOf="@id/radioGroupLogSeverity"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_log_hour"
                android:layout_weight="1"
                android:text="@string/intrv_hour"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textSize="@dimen/size_medium"
                android:checked="true"
                android:onClick="@{() -> viewModel.onFilterIntervalHour()}"
                />
            <RadioButton
                android:id="@+id/radio_log_day"
                android:layout_weight="1"
                android:text="@string/intrv_day"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textSize="@dimen/size_medium"
                android:onClick="@{() -> viewModel.onFilterIntervalDay()}"
                />
            <RadioButton
                android:id="@+id/radio_log_all_period"
                android:layout_weight="1"
                android:text="@string/intrv_all_period"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:textSize="@dimen/size_medium"
                android:onClick="@{() -> viewModel.onFilterIntervalAll()}"
                />
        </RadioGroup>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGroupLogSeverity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            app:listLog="@{viewModel.logList}"
            tools:itemCount="12"
            tools:listitem="@layout/log_item"
            />

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
